Change Id name of quit button

--- a/game-page.html
+++ b/game-page.html
@@ -31,7 +31,7 @@
             <div id="nav-menu">
                 <a href="index.html">Home</a>
                 <button id="howtoplay-btn-gamepage">How to Play</button>
-                <button id="quit-link">Quit</button>
+                <button id="quit-btn">Quit</button>
             </div>
         </nav>
     </header>
