Fix minor typographical error

--- a/game-page.html
+++ b/game-page.html
@@ -98,7 +98,7 @@
                 </div>
             </section>
 
-            <!-- container for answers -->
+            <!-- container for answer choices -->
             <div id="answers-container">
                 <!-- options for the answer -->
                 <button class="answer-button" id="answer-option-a" aria-label="option A"></button>
